salesforce/src/objects/Sales_Order_Item__c.object
<CustomObject>
    <description>Individual items purchased.</description>
    <fields>
        <fullName>Product__c</fullName>
        <description>The product sold.</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Sales Order Items</relationshipLabel>
        <relationshipName>Sales_Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <label>Sales Order</label>
        <referenceTo>Sales_Order__c</referenceTo>
        <relationshipLabel>Sales Order Items</relationshipLabel>
        <relationshipName>Sales_Order_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Sales Order Item</label>
    <nameField>
        <displayFormat>SOI-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>